# Alias_project

./: .gitignore  CMakeLists.txt  DBConnection.cpp  DBConnection.h  IWordDBManager.h  UserDBManager.cpp  UserDBManager.h  WordDBManager.cpp  WordDBManager.h  async.http.client.cpp  async.http.client.h  async.http.server.cpp  async.http.server.h  connection.cpp  connection.h  main.cpp  readme.md  request.h  response.h  router.h  tables.h  useful.txt
Client/: async.http.client.cpp  async.http.client.h
Client+GUI/: .gitignore  CMakeLists.txt
Client+GUI/Client/: CMakeLists.txt  async.http.client.cpp  async.http.client.h  response.h
Client+GUI/DB/: UserDBManager.h
Client+GUI/GUI/: main.cpp
Client+GUI/GUI/window_autorise/headers/: iclientinterface.h  mainwindow.h
Client+GUI/GUI/window_configs/headers/: ISetting.h  configwindow.h  gameconfig.h
Client+GUI/GUI/window_configs/src/: configwindow.cpp  configwindow.ui  gameconfig.cpp
Client+GUI/GUI/window_game/headers/: LeaderBoard.h  Message.h  board.h  clientinterface.h  iTimerController.h
Client+GUI/GUI/window_game/src/: Leader.cpp  LeaderBoard.cpp  Message.cpp  board.cpp  clientinterface.cpp  gamewindow.cpp  messenger.cpp  timer.cpp
Client+GUI/Server/: connection.h
DB/: DBConnection.cpp  IUserDBManager.h  UserDBManager.cpp  UserDBManager.h  WordDBManager.cpp  WordDBManager.h  tables.h
GUI/: CMakeLists.txt
GUI/window_autorise/headers/: User.h  mainwindow.h
GUI/window_autorise/src/: iclientinterface.cpp  mainwindow.cpp  mainwindow.ui
GUI/window_configs/headers/: Setting.h  configwindow.h  gamebuilder.h
GUI/window_configs/src/: Setting.cpp  configwindow.cpp  configwindow.ui  gamebuilder.cpp  gameconfig.cpp
GUI/window_game/: CMakeLists.txt
GUI/window_game/headers/: LeaderBoard.h  Message.h  board.h  gamewindow.h  timer.h
GUI/window_game/src/: board.cpp  gamewindow.cpp  gamewindow.cpp.autosave  gamewindow.ui  messenger.cpp  timer.cpp
Server/: async.http.server.cpp  async.http.server.h  connection.h  request.h  response.h
Server+DB/: CMakeLists.txt
Server+DB/Server/: connection.cpp  request.h  router.h
window_autorise/: CMakeLists.txt
window_autorise/headers/: mainwindow.h
window_autorise/src/: iclientinterface.cpp  mainwindow.cpp  mainwindow.ui
window_configs/: CMakeLists.txt
window_configs/headers/: configwindow.h  gameconfig.h
window_configs/src/: configwindow.cpp  configwindow.ui  gamebuilder.cpp  gameconfig.cpp
window_game/: CMakeLists.txt
window_game/headers/: IBoard.h  IClientInterface.h  ICommunication.h  ILeaderBoard.h  IMessenger.h  Leader.h  LeaderBoard.h  Message.h  board.h  gamewindow.h  iTimerController.h  itimer.h  messenger.h  timer.h
window_game/src/: LeaderBoard.cpp  Message.cpp  board.cpp  clientinterface.cpp  gamewindow.cpp  gamewindow.ui  messenger.cpp  timer.cpp
